--- a/app/appsettings.json
+++ b/app/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "TodoListContext": "server=127.0.0.1;database=todolist;user=blazorapp;password=blazorpwd"
+  }
 }
